# Rust_Examples

./: LICENSE  Notes.txt  README.md
mars_calc/: Cargo.toml
mars_calc/src/: main.rs
server/: Cargo.toml
server/public/: hello.html  index.html
server/src/: main.rs  server.rs  website_handler.rs
server/src/http/: method.rs  mod.rs  parse_error.rs  query_string.rs  request.rs  response.rs  status_code.rs
simple-auth-server/: Cargo.toml  default.json  rustfmt.toml  sample_requests.http
simple-auth-server/src/: main.rs
simple-auth-server/src/api/: category_controller.rs  mod.rs  recipe_controller.rs  users_controller.rs
simple-auth-server/src/data/: mod.rs
simple-auth-server/src/data/common/: data_context.rs  data_element.rs  data_tools.rs  mod.rs
simple-auth-server/src/data/date_time/: mod.rs  simple_date.rs  simple_date_time.rs  simple_offset_date_time.rs  simple_time.rs
simple-auth-server/src/models/: mod.rs
simple-auth-server/src/models/config/: app_config.rs  database_info.rs  mod.rs  web_info.rs
simple-auth-server/src/models/data/: category.rs  mod.rs  recipe.rs  sub_category.rs  users.rs
simple-auth-server/src/models/request/: mod.rs
simple-auth-server/src/models/request/users/: change_password.rs  login.rs  mod.rs  register_user.rs
simple-auth-server/src/models/response/: get_category.rs  get_users.rs  mod.rs
simple-auth-server/src/models/response/data_contracts/: category.rs
simple-auth-server/src/util/: auth_services.rs  mod.rs  string_services.rs
updated_web_api/: Cargo.toml  sample_requests.http
updated_web_api/src/: default.json  main.rs
updated_web_api/src/api/sales/customer/: customer_controller.rs  mod.rs
updated_web_api/src/data/common/: data_context.rs  mod.rs
updated_web_api/src/models/: mod.rs
updated_web_api/src/models/config/: app_config.rs  database_info.rs  mod.rs  web_info.rs
updated_web_api/src/models/system/: customer.rs  mod.rs
web_api/: Cargo.toml  Execution_Data.txt  sample_requests.http
web_api/src/: db_endpoints.rs  main.rs
web_api/src/db/: db_endpoints.rs  mod.rs
