[package]
name = "simple-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.5.1"
actix-web = "4.1.0"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.56"
derive_more = "0.99.17"
bb8 = "0.8.0"
tiberius = { version = "0.9.0", features = ["rust_decimal", "sql-browser-async-std", "async-std", "time"] }
# When not using Tokio for async processing, make sure to turn off all default features
# This way we can specify that we are using async-std crate instead.
bb8-tiberius = {version = "0.11.0", default-features = false, features = ["tds73", "sql-browser", "with-async-std"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.82"
sparkpost = "0.5.4"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
unicode-segmentation = "1.9.0"
time = {version = "0.3.11", features = ["parsing", "formatting", "serde"]}
config = { version = "0.13.1", features = [ "json" ]}