[package]
name = "updated_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
bb8 = "0.7.1"
tiberius = { version = "0.7.1", features = ["rust_decimal", "sql-browser-async-std", "async-std", "chrono"] }
bb8-tiberius = {version = "0.8.0", features = ["sql-browser"] }
serde = "1.0.136"
serde_json = "1.0.79"
lazy_static = "1.4.0"
config = { version = "0.12.0", features = [ "json" ]}
chrono = { version = "0.4.19", features = [ "serde" ]}
num-traits = "0.2.14"